# spider-novel

./: .gitignore  Cargo.toml  README.md  design.md
migrate/: novel.sql  sort.sql
migrations/: 20220627133617_sorts.down.sql  20220627133617_sorts.up.sql  20220628090800_sorts.down.sql  20220628090800_sorts.up.sql  20220708021410_novels.down.sql  20220708021410_novels.up.sql
src/: common.rs  ddxsku.rs  keeper.rs  lib.rs  main.rs  qubige.rs  spider.rs  webook.rs
src/common/: doc.rs  httputils.rs  sender.rs  snowid.rs  xstring.rs
src/ddxsku/: data.rs
src/ddxsku/data/: novel.rs  sort.rs
src/keeper/: data.rs
src/keeper/data/: module.rs  sort.rs
src/keeper/data/entity/: mod.rs  novel.rs  novel_relation.rs  prelude.rs  sort.rs
src/qubige/: data.rs  novel.rs  sort.rs
src/qubige/data/: novel.rs
src/qubige/novel/: section.rs
tests/: data.rs  generic.rs  get.rs  quickjs.rs  spider_ddxsku.rs  syn.rs  tmpl_handlebars.rs  xpath.rs
