#[workspace]
#members = [".", "migration"]
[package]
name = "spider-novel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spider"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "abort"

[dependencies]
tokio = { version = "1.0.0", features = ["full"] }
anyhow = "1.0.58"
chrono = "0.4.19"
static_init = "1.0.2"
log = "0.4"
fast_log = "1.5.17"
async-trait = "0.1.56"
rs-snowflake = "0.6.0"
dotenv = "0.15.0"
nipper = "0.1.9"
async-recursion = "1.0.0"
libxml = "0.3.1"
[dependencies.reqwest]
version = "0.11.11"
features = [
    "default-tls",
    "brotli",
    "gzip",
    "deflate",
    "blocking",
    "json",
    "multipart"
]
[dependencies.serde]
version = "1"
features = ["derive"]
[dependencies.sea-orm]
version = "0.8.0"
features = [
    "macros",
    "with-json",
    "with-chrono",
    "with-rust_decimal",
    "with-uuid",
    "with-time",
    "sqlx-sqlite",
    "runtime-tokio-rustls"
]